fix: change alignment in goto section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1434,6 +1434,7 @@ p, .new {
 .goto__section-title {
     padding-top: 90px;
     padding-bottom: 50px;
+    text-align: center!important;
 }
 
 .goto-content {
